--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,60 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">27,772</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">58,095</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">testPages.RegistrationPage_Test</td><td><a href="#m0">registration</a></td><td rowspan="2">1711956685670</td><td rowspan="2">4870</td></tr><tr class="failedeven"><td><a href="#m1">registration</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testPages.AddLessons_Test</td><td><a href="#m0">addlesson</a></td><td rowspan="2">1714892614656</td><td rowspan="2">19337</td></tr><tr class="passedeven"><td><a href="#m1">addlesson</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testPages.RegistrationPage_Test#registration</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>{subPrograms=SCRUM MASTER CERTIFICATION, password=admin@123, phoneNumber=8023546780, programs=CAREER BRIDGE, email=sandy_123@gmail.com, username=Sandya1}</td><td>org.testng.TestRunner@9f86dc3</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;div tabindex=&quot;0&quot; role=&quot;button&quot; aria-expanded=&quot;false&quot; aria-haspopup=&quot;listbox&quot; aria-labelledby=&quot;demo-simple-select-label demo-simple-select&quot; id=&quot;demo-simple-select&quot; class=&quot;MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input&quot;&gt;...&lt;/div&gt; is not clickable at point (894, 448). Other element would receive the click: &lt;iframe id=&quot;webpack-dev-server-client-overlay&quot; src=&quot;about:blank&quot; style=&quot;position: fixed; inset: 0px; width: 100vw; height: 100vh; border: none; z-index: 2147483647;&quot;&gt;&lt;/iframe&gt;
-  (Session info: chrome=123.0.6312.86)
-Build info: version: &apos;4.18.1&apos;, revision: &apos;b1d3319b48&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [660dcd4d6d999f43e3b65d25a408cb31, clickElement {id=f.C0389DBA61B4EA790160FE097FF5A09A.d.AA9BC91CBD0FC1C977ABF484B67E92BF.e.758}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 123.0.6312.86, chrome: {chromedriverVersion: 123.0.6312.86 (9b72c47a0536..., userDataDir: C:\Users\savit\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56163}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56163/devtoo..., se:cdpVersion: 123.0.6312.86, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (660dcd4d6d999f43e3b65d25a408cb31)] -&gt; xpath: //*[@id=&quot;demo-simple-select&quot;]]
-Session ID: 660dcd4d6d999f43e3b65d25a408cb31
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:519)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at jdk.proxy2/jdk.proxy2.$Proxy18.click(Unknown Source)
-	at reusableComponents.CommonMethods.click(CommonMethods.java:119)
-	at pageObjects.RegistrationPageObject.registration(RegistrationPageObject.java:50)
-	at testPages.RegistrationPage_Test.registration(RegistrationPage_Test.java:27)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testPages.RegistrationPage_Test#registration</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>{subPrograms=JAVA FULLSTACK, password=admin123, phoneNumber=9980123345, programs=CODING BOOT CAMP, email=savi123@gmail.com, username=Savitri1}</td><td>org.testng.TestRunner@9f86dc3</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;div tabindex=&quot;0&quot; role=&quot;button&quot; aria-expanded=&quot;false&quot; aria-haspopup=&quot;listbox&quot; aria-labelledby=&quot;demo-simple-select-label demo-simple-select&quot; id=&quot;demo-simple-select&quot; class=&quot;MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input&quot;&gt;...&lt;/div&gt; is not clickable at point (894, 448). Other element would receive the click: &lt;iframe id=&quot;webpack-dev-server-client-overlay&quot; src=&quot;about:blank&quot; style=&quot;position: fixed; inset: 0px; width: 100vw; height: 100vh; border: none; z-index: 2147483647;&quot;&gt;&lt;/iframe&gt;
-  (Session info: chrome=123.0.6312.86)
-Build info: version: &apos;4.18.1&apos;, revision: &apos;b1d3319b48&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [65a6025373a37cf8b0d9b750a5940629, clickElement {id=f.60CE8084698A3B4F2DB6E868E11C6D04.d.A42D47FFED711512AE8354AE1B1A0372.e.758}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 123.0.6312.86, chrome: {chromedriverVersion: 123.0.6312.86 (9b72c47a0536..., userDataDir: C:\Users\savit\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56110}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56110/devtoo..., se:cdpVersion: 123.0.6312.86, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (65a6025373a37cf8b0d9b750a5940629)] -&gt; xpath: //*[@id=&quot;demo-simple-select&quot;]]
-Session ID: 65a6025373a37cf8b0d9b750a5940629
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:519)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at jdk.proxy2/jdk.proxy2.$Proxy18.click(Unknown Source)
-	at reusableComponents.CommonMethods.click(CommonMethods.java:119)
-	at pageObjects.RegistrationPageObject.registration(RegistrationPageObject.java:50)
-	at testPages.RegistrationPage_Test.registration(RegistrationPage_Test.java:27)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testPages.AddLessons_Test#addlesson</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Course=SOFTWARE ENGINEERING, Content=Java, Lesson Name=Electronics}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testPages.AddLessons_Test#addlesson</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Course=Testing, Content=abc, Lesson Name=xyz}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
