--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7fcb4">  <td>24/03/07 13:33:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanUp()[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="b7fcb4">  <td>24/03/07 13:33:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanUp()[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9e6fbd">  <td>24/03/07 13:32:58</td>   <td>-13288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPage_Test.registration(java.lang.Object)[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">registration</td> 
+<tr bgcolor="8ea374">  <td>24/05/05 12:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddLessons_Test.addlesson(java.lang.Object)[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">addlesson</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9e6fbd">  <td>24/03/07 13:32:58</td>   <td>-13288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationPage_Test.registration(java.lang.Object)[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">registration</td> 
+<tr bgcolor="8ea374">  <td>24/05/05 12:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddLessons_Test.addlesson(java.lang.Object)[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">addlesson</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="b7fcb4">  <td>24/03/07 13:32:52</td>   <td>-19442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMethod()[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">&gt;&gt;setupMethod</td> 
+<tr bgcolor="627689">  <td>24/05/05 12:34:19</td>   <td>18170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanUp()[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">&lt;&lt;cleanUp</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="b7fcb4">  <td>24/03/07 13:32:52</td>   <td>-19442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMethod()[pri:0, instance:testPages.RegistrationPage_Test@4f7c0be3]">&gt;&gt;setupMethod</td> 
+<tr bgcolor="627689">  <td>24/05/05 12:34:19</td>   <td>18170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanUp()[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>24/05/05 12:33:54</td>   <td>-7401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMethod()[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">&gt;&gt;setupMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="627689">  <td>24/05/05 12:33:54</td>   <td>-7401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupMethod()[pri:0, instance:testPages.AddLessons_Test@3e58d65e]">&gt;&gt;setupMethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
